samples/KubernetesService/ingress-https-only/examples/scenario-ingress-https-only/violations/violation-agic.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: violation-agic
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aspnetapp
            port:
              number: 80
