samples/KubernetesService/ingress-https-only/examples/scenario-ingress-https-only/violations/violation-nginx-ingress-class.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: violation-nginx-ingress-class
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false" # detexts this field
spec:
  ingressClassName: nginx
  tls:
    - secretName: secret2
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aspnetapp
            port:
              number: 80
