samples/KubernetesService/ingress-https-only/examples/scenario-ingress-https-only/violations/violation-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: violation-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetesviolation-nginx.io/force-ssl-redirect: "false" # detexts this field
spec:
  tls:
    - secretName: secret2
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aspnetapp
            port:
              number: 80
